# waggledance-swarm

./: .dockerignore  .env.example  .gitignore  ACCEPTANCE_CRITERIA.md  AGENTS.md  CHANGELOG.md  CHANGE_REPORT.md  CLAUDE.md  COMMERCIAL-USE.md  CONTRIBUTING.md  CURRENT_STATE.md  CURRENT_STATUS.md  Dockerfile  ENTRYPOINTS.md  INTEGRATION_COMPLETE.md  INTEGRATION_REPORT.md  LICENSE  LICENSE-BUSL.txt  LICENSE-CORE.md  MIGRATION_STATUS.md  NEW_ARCHITECTURE.md  NOTICE  OVERNIGHT_PRODUCTION_REPORT.md  OVERNIGHT_REPORT.md  PORT_CONTRACTS.md  README.md  RECOVERY_RECONSTRUCTION_REPORT.md  SCHEDULER_INTEGRATION.md  SPRINT_REPORT_AGENT2.md  WAGGLEDANCE_AI_BRIEF.md  WORK_ORDER.md  backup.bat  benchmark_20260222_195852.json  benchmark_v2.py  benchmark_v2_20260224_000346.json  benchmark_v3.py  benchmark_v3_20260224_012212.json  benchmark_v3_20260224_012619.json  benchmark_v3_20260224_013908.json  benchmark_v3_20260224_015041.json  (+66 more)
.claude/: settings.local.json
.githooks/: pre-push
.github/: dependabot.yml
agents/: base_agent.py  hacker_agent.py  oracle_agent.py  spawner.py
backend/: auth.py  main.py
backups/: waggle_20260225_091100_meta.json  waggle_20260225_092809_meta.json  waggle_20260225_093134_meta.json  waggle_20260225_093558_meta.json  waggle_20260225_101114_meta.json  waggle_20260225_101434_meta.json  waggle_20260225_101732_meta.json  waggle_20260225_121319_meta.json
chroma_data/: chroma.sqlite3
configs/: alias_registry.yaml  bee_terms.yaml  benchmarks.yaml  boilerplate_blacklist.txt  confusion_memory.json  hex_cells.yaml  micro_v1_patterns.json  seasonal_focus.yaml  seasonal_rules.yaml  settings.yaml  shadow_corpus.yaml  specialist_models.yaml
core/: active_learning.py  adaptive_throttle.py  agent_channels.py  agent_levels.py  agent_rollback.py  audit_log.py  auto_install.py  canary_promoter.py  causal_replay_api.py  chat_delegation.py  chat_handler.py  chat_history.py  chat_preprocessing.py  chat_router.py  chat_routing_engine.py  chat_telemetry.py  chromadb_adapter.py  circuit_breaker.py  code_reviewer.py  cognitive_graph.py  constraint_engine.py  cross_agent_search.py  disk_guard.py  domain_capsule.py  domain_model_miner.py  elastic_scaler.py  embedding_cache.py  en_validator.py  english_source_learner.py  explainability.py  faiss_store.py  fast_memory.py  hallucination_checker.py  heartbeat_controller.py  hive_routing.py  hive_support.py  knowledge_distiller.py  knowledge_loader.py  language_readiness.py  learning_engine.py  (+46 more)
dashboard/: index.html  package-lock.json  package.json  vite.config.js
data/: code_suggestions.jsonl  confusion_memory.json  finetune_live.jsonl  finetune_rejected.jsonl  mass_test_results.json  meta_reports.jsonl  micromodel_v2_train.jsonl  oracle_questions.md  scan_progress.json  test_report.json  test_whisper.db  waggle_dance.db  web_learning.jsonl
docs/: ACTIVE_LEARNING.md  API.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  AUTONOMY_RUNTIME.md  CAPABILITY_MODEL.md  DASHBOARD_IMPROVEMENTS.md  DATA_COMPATIBILITY.md  DEPLOYMENT.md  DIAGNOSTIC_20260310.md  ENTRYPOINTS.md  FACTORY_INTEGRATION.md  HYBRID_RETRIEVAL.md  KUSTANNUSLASKELMA.md  LEARNING_SAFETY.md  MIGRATIONS.md  MIGRATION_STATUS.md  NEW_ARCHITECTURE.md  NEW_RUNTIME_VALIDATION.md  NIGHT_LEARNING_V2.md  NIGHT_PIPELINE_INGESTION.md  PORT_CONTRACTS.md  PROOF_RUN_REPORT_v350.md  README_CHRISTIAN.md  README_TUOTE_ESITE.md  RECOVERY_POLICY.md  SECURITY.md  SENSORS.md  SESSION_SUMMARY_20260314.md  SIMULATED_TRAINING.md  SOLVER_CANDIDATE_LAB.md  SPECIALIST_MODELS.md  STATE_OWNERSHIP.md  (+14 more)
(+1813 files in other folders)
