[project]
name = "waggledance-swarm"
version = "1.16.0"
description = "Local-first multi-agent AI with Finnish NLP and autonomous learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    {name = "Jani Korpi"}
]

[project.scripts]
waggledance = "waggledance.adapters.cli.start_runtime:main"

[project.urls]
Homepage = "https://github.com/Ahkeratmehilaiset/waggledance-swarm"
Issues = "https://github.com/Ahkeratmehilaiset/waggledance-swarm/issues"
